--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -26,7 +26,7 @@
                                     </strong>
                                 </li>
                                 <li>Contract Type:
-                                    <strong><a href="#">{{ post.category }}</a>
+                                    <strong>{{ post.category }}
                                     </strong>
                                 </li>
                             </ul>
