added content in Services, updated footer

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -46,14 +46,14 @@
                         <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Game UX</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Your acquisition and onboarding funnels are leaking. I'll provide actionable feedback and recommendation to fix them.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Chinese Mobile Market Consultancy</h4>
+                    <h4 class="service-heading">Chinese Market Consultancy</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
