--- a/_includes/services.html
+++ b/_includes/services.html
@@ -53,7 +53,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Chinese Market Consultancy</h4>
+                    <h4 class="service-heading">Consulting on China</h4>
                     <p class="text-muted">Lorem ipsum .</p>
                 </div>
             </div>
