--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Launch and Marketing Strategy</h4>
+                    <h4 class="service-heading">Launch Strategy</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
                 <div class="col-md-4">
