Added Tag Manager + various cosmetic changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,9 +41,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Hi, my name is Xavier!</div>
+                <div class="intro-heading">Hi, I'm Xavier Rosée</div>
                 <div class="intro-lead-in">I'm the Marketing consultant your games need.</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
     </header>
