--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -176,8 +176,10 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
+    text-transform: uppercase;
+    font-weight: 800;
 }
 
 .navbar-default .navbar-brand:hover,
