--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Hi, I'm Xavier Rosée</div>
+                <div class="intro-heading">Hi, I'm Xavier</div>
                 <div class="intro-lead-in">I'm the Marketing consultant your games need.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
