Updated Footer, Contact form and added Cookie consent

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,13 +13,13 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <!-- <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Credits</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul> -->
+                    </ul>
                 </div>
             </div>
         </div>
+
+
     </footer>
