--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -659,8 +659,8 @@ aside.clients img {
 }
 
 section#contact {
-    background-color: #222;
-    background-image: url('{{ site.baseurl }}/img/map-image.png');
+    background-color: #010101;
+    background-image: url('{{ site.baseurl }}/img/earth-image.jpg');
     background-position: center;
     background-repeat: no-repeat;
 }
