--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,8 +41,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Hi, I'm Xavier</div>
-                <div class="intro-lead-in">I'm the Marketing consultant your games need.</div>
+                <div class="intro-heading">"embrace brand-building and marketing, because you ain’t gonna survive without it"</div>
+                <div class="intro-lead-in">- Raph Koster, 2018.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
