--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     {% include header.html %}
     {% include services.html %}
     {% include portfolio_grid.html %}
-    {% include clients.html %}
+    <!-- {% include clients.html %} -->
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
