--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">If you're looking for a consultant with a deep understanding of the gaming market coupled with creativity, grit and passion, you're at the right place.</h3>
+                    <h3 class="section-subheading text-muted">If you're looking for a consultant with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +14,7 @@
                         <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Launch Strategy</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="text-muted">Research and strategic planning for getting your game or app to market.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="text-muted">Growing your game or app's user base at scale, following a ROI-driven approach to match your KPIs..</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-apple fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="text-muted">Analysis of your game or app's store listing, followed by actionable recommendations to increase conversion rate and discoverability..</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
