--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Embrace brand-building and marketing, because you ain’t gonna survive without it - Raph Koster</div>
+                <div class="intro-lead-in">Hi, I'm Xavier. You don't know it, yet you need my help with marketing your mobile product.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
