--- a/_includes/services.html
+++ b/_includes/services.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
-                    <p class="text-muted">Growing your game or app's user base at scale, following a ROI-driven approach to match your KPIs..</p>
+                    <p class="text-muted">Growing your game or app's user base at scale, following a ROI-driven approach to match your core KPIs.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-apple fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">Analysis of your game or app's store listing, followed by actionable recommendations to increase conversion rate and discoverability..</p>
+                    <p class="text-muted">Analysis of your game or app's store listing, followed by actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -38,7 +38,7 @@
                         <i class="fa fa-money fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Product and Monetisation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="text-muted">I'll review and optimise your IAP or ad-based monetisation. Even if it means I have to integrate SDKs myself.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -46,7 +46,7 @@
                         <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Game UX</h4>
-                    <p class="text-muted">Your acquisition and onboarding funnels are leaking. I'll provide actionable feedback and recommendation to fix them.</p>
+                    <p class="text-muted">Your acquisition and onboarding funnels are leaking. I'll fix them.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -54,7 +54,7 @@
                         <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Consulting on China</h4>
-                    <p class="text-muted">Lorem ipsum .</p>
+                    <p class="text-muted">The Chinese mobile market is one of the hardest to navigate. I'll provide you with guidance on how to operate your business there.</p>
                 </div>
             </div>
         </div>
