Final commit before testing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Hi, I'm Xavier. You don't know it, yet you need my help with marketing your mobile product.</div>
+                <div class="intro-heading">
+                  Hi, I'm Xavier.
+                </div>
+                <div class="intro-lead-in">Your mobile game is struggling to find its audience? I can help.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
