--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,50 +8,50 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="far fa-rocket fa-stack-1x fa-inverse"></i>
-                    </span>
+                <div class="col-md-4 fa-8x">
+                  <span class="fa-layers fa-fw">
+                      <i class="fas fa-circle text-primary"></i>
+                      <i class="fas fa-rocket fa-inverse" data-fa-transform="shrink-9"></i>
+                  </span>
                     <h4 class="service-heading">Launch Strategy</h4>
                     <p class="text-muted">Research and strategic planning for getting your game or app to market.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="far fa-user-plus fa-stack-1x fa-inverse"></i>
+                <div class="col-md-4 fa-8x">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fas fa-user-plus fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
                     <p class="text-muted">Growing your game or app's user base at scale, following a ROI-driven approach to match your core KPIs.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fab fa-apple fa-stack-1x fa-inverse"></i>
+                <div class="col-md-4 fa-8x">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
                     <p class="text-muted">Analysis of your game or app's store listing, followed by actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="far fa-money-bills-alt fa-stack-1x fa-inverse"></i>
+                <div class="col-md-4 fa-8x">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fas fa-money-bill-alt fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Product and Monetisation</h4>
                     <p class="text-muted">I'll review and optimise your IAP or ad-based monetisation. Even if it means I have to integrate SDKs myself.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="far fa-gamepad fa-stack-1x fa-inverse"></i>
+                <div class="col-md-4 fa-8x">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fas fa-gamepad fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Game UX</h4>
                     <p class="text-muted">Your acquisition and onboarding funnels are leaking. I'll fix them.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="far fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fab fa-weixin fa-stack-1x fa-inverse"></i>
+                <div class="col-md-4 fa-8x">
+                    <span class="fa-layers fa-fw">
+                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fab fa-weixin fa-inverse" data-fa-transform="shrink-8"></i>
                     </span>
                     <h4 class="service-heading">Consulting on China</h4>
                     <p class="text-muted">The Chinese mobile market is one of the hardest to navigate. I'll provide you with guidance on how to operate your business there.</p>
