--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,6 +16,9 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
+                            {% unless post.video == null %}
+                            <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{ post.video }}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+                            {% endunless %}
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>{{ post.client }}
