--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Clients, partners and companies that trust me with their Marketing:</h3>
+                    <h3 class="section-subheading text-muted">Studios and publishers that trust me with marketing their games:</h3>
                 </div>
             </div>
             <div class="row">
@@ -13,7 +13,7 @@
                     <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
