--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,10 +41,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">
+                <div class="intro-lead-in">
                   Hi, I'm Xavier.
                 </div>
-                <div class="intro-lead-in">Your mobile game is struggling to find its audience? I can help.</div>
+                <div class="intro-heading">I will help your game find its audience.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
