--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,15 +8,18 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="contactForm" id="contactForm" action="https://formspree.io/contact@offtheground.io" method="POST" novalidate>
+                      <input type="hidden" name="_next" value="https://offtheground.io" />
+                      <input type="hidden" name="_subject" value="Free consultation request" />
+                      <input type="hidden" name="_language" value="en" />
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="First Name *" id="name" required data-validation-required-message="Please enter your First Name.">
+                                    <input type="text" class="form-control" placeholder="First Name *" id="name" required name="name" data-validation-required-message="Please enter your First Name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Email Address *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Email Address *" id="email" required name="_replyto" data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <!--<div class="control-group form-group">
@@ -26,7 +29,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="What is your biggest challenge when it comes to marketing your game(s)? *" id="message" required data-validation-required-message="Please let me know how I can help you."></textarea>
+                                    <textarea class="form-control" placeholder="What is your biggest challenge when it comes to marketing your game(s)? *" id="message" required name="message" data-validation-required-message="Please let me know how I can help you."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
