focusing on game marketing

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                       <i class="fas fa-rocket fa-inverse" data-fa-transform="shrink-9"></i>
                   </span>
                     <h4 class="service-heading">Launch Strategy</h4>
-                    <p class="text-muted">Research and strategic planning for getting your game or app to market.</p>
+                    <p class="text-muted">Research and strategic planning for getting your game to market.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -22,7 +22,7 @@
                         <i class="fas fa-user-plus fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
-                    <p class="text-muted">Growing your game or app's user base at scale, following a ROI-driven approach to match your core KPIs.</p>
+                    <p class="text-muted">Growing your game's user base at scale, following a ROI-driven approach to match your core KPIs.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -30,7 +30,7 @@
                         <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">Analysis of your game or app's store listing, followed by actionable recommendations to increase conversion rate and discoverability.</p>
+                    <p class="text-muted">Analysis of your game's store listing, followed by actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
