--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,17 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+
+    <!-- Facebook Open Graph -->
+    <meta property="og:title" content=" {{ site.title }} "/>
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="{{ site.url }}"/>
+    <meta property="og:image" content="{{ site.image | prepend: site.url }}"/>
+    <meta property="og:site_name" content="Xavier Rosée - Mobile Marketing Consultant"/>
+    <meta property="og:description" content="{{ site.description }}"/>
+    <!-- End Facebook Open Graph -->
+
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 
@@ -19,7 +30,7 @@
 
     <!-- Custom Fonts -->
    	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-   	               
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
