Fixing the services section

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                       <i class="fas fa-rocket fa-inverse" data-fa-transform="shrink-9"></i>
                   </span>
                     <h4 class="service-heading">Launch Strategy</h4>
-                    <p class="text-muted">Research and strategic planning for getting your game to market.</p>
+                    <p class="text-muted">I will plan and execute a comprehensive strategy for getting your game to market.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -22,7 +22,7 @@
                         <i class="fas fa-user-plus fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
-                    <p class="text-muted">Growing your game's user base at scale, following a ROI-driven approach to match your core KPIs.</p>
+                    <p class="text-muted">I will grow your game's user base at scale, with a ROI-driven approach to match your core KPIs.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -30,7 +30,7 @@
                         <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">Analysis of your game's store listing, followed by actionable recommendations to increase conversion rate and discoverability.</p>
+                    <p class="text-muted">I will analyse of your game's store listing and provide by actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -38,7 +38,7 @@
                         <i class="fas fa-money-bill-alt fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Product and Monetisation</h4>
-                    <p class="text-muted">I'll review and optimise your IAP or ad-based monetisation. Even if it means I have to integrate SDKs myself.</p>
+                    <p class="text-muted">I will review and optimise your IAP or ad-based monetisation. Even if it means I have to integrate SDKs myself.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -46,7 +46,7 @@
                         <i class="fas fa-gamepad fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Game UX</h4>
-                    <p class="text-muted">Your acquisition and onboarding funnels are leaking. I'll fix them.</p>
+                    <p class="text-muted">I will fix your acquisition and onboarding funnels. Yes, they are leaking. No, you don't know where yet.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -54,7 +54,7 @@
                         <i class="fab fa-weixin fa-inverse" data-fa-transform="shrink-8"></i>
                     </span>
                     <h4 class="service-heading">Consulting on China</h4>
-                    <p class="text-muted">The Chinese mobile market is one of the hardest to navigate. I'll provide you with guidance on how to operate your business there.</p>
+                    <p class="text-muted">I will provide you with guidance to navigate the Chinese mobile market and operate your business there with the right partners.</p>
                 </div>
             </div>
         </div>
