fixed the hover issue on fa-circle (ASO)

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
-                        <i class="fas fa-circle text-primary"></i>
+                        <i class="fas fa-circle text-primary hoverdisabled"></i>
                         <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
