--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -868,3 +868,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
 }
+
+.hoverdisabled {
+  pointer-events: none;  /**<-----------*/
+}
