FB Pixel Lead Capture

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -36,7 +36,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button id="sendMessageButton" type="submit" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
                     </form>
