--- a/_includes/services.html
+++ b/_includes/services.html
@@ -30,7 +30,7 @@
                         <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">I will analyse of your game's store listing and provide by actionable recommendations to increase conversion rate and discoverability.</p>
+                    <p class="text-muted">I will analyse your game's store listing and provide by actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -45,7 +45,7 @@
                         <i class="fas fa-circle text-primary"></i>
                         <i class="fas fa-gamepad fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
-                    <h4 class="service-heading">Game UX</h4>
+                    <h4 class="service-heading">Game Analytics and UX</h4>
                     <p class="text-muted">I will fix your acquisition and onboarding funnels. Yes, they are leaking. No, you don't know where yet.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
