Fixed event name

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -17,7 +17,7 @@
 
    <!-- FB Pixel: Lead Capture -->
    <script type="text/javascript">
-  var button = document.getElementById('addToCartButton');
+  var button = document.getElementById('sendMessageButton');
   button.addEventListener(
     'click',
     function() {
