--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-offset-2 col-lg-8 text-center">
                     <h2 class="section-heading">Services</h2>
                     <h3 class="section-subheading text-muted">If you're looking for a consultant with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.</h3>
                 </div>
