Added Google Certification and fixed portfolio layout

--- a/_includes/badges.html
+++ b/_includes/badges.html
@@ -5,6 +5,9 @@
                 <div class="col-md-3 col-sm-6">
                         <img src="img/logos/hatch.jpg" class="img-responsive img-centered" alt="">
                 </div>
+                <div class="col-md-3 col-sm-6">
+                        <img src="img/logos/adwordsmobile.jpg" class="img-responsive img-centered" alt="">
+                </div>
             </div>
         </div>
     </aside>
