--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
   <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; {{ site.title }} 2016-{{ 'now' | date: "%Y" }}</span>
+                <div class="col-md-6">
+                    <span class="copyright">Copyright &copy; {{ site.title }} & Off The Ground 2016-{{ 'now' | date: "%Y" }}</span>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2 col-md-offset-4">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
                         <li><a href="{{ network.url }}"><i class="fab fa-{{ network.title }}"></i></a>
@@ -12,12 +12,15 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <!-- Credits Popover not working -->
+                <!--
+                <div class="col-md-2">
                     <ul class="list-inline quicklinks">
                         <li><a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Credits</a>
                         </li>
                     </ul>
                 </div>
+              -->
             </div>
         </div>
 
