--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="contactForm" id="contactForm" action="https://formspree.io/contact@offtheground.io" method="POST" novalidate>
+                    <form name="contactForm" id="contactForm" action="https://formspree.io/{{site.email}}" method="POST" novalidate>
                       <input type="hidden" name="_next" value="https://offtheground.io" />
                       <input type="hidden" name="_subject" value="Free consultation request" />
                       <input type="hidden" name="_language" value="en" />
