fixed twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,9 +24,9 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@xavierosee" />
-    <meta name="twitter:title" content="{{ site.title }} - Certified Mobile Marketing Consultant" />
+    <meta name="twitter:title" content="{{ site.title }} - Mobile Marketing Consultant" />
     <meta name="twitter:description" content="{{ site.description }}" />
-    <meta name="twitter:image" content=" site.largeimage " />
+    <meta name="twitter:image" content="{{ site.largeimage }}" />
     <!-- End Twitter Card -->
 
 
