fixed Twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     <meta name="twitter:site" content="@xavierosee" />
     <meta name="twitter:title" content="{{ site.title }} - Mobile Marketing Consultant" />
     <meta name="twitter:description" content="{{ site.description }}" />
-    <meta name="twitter:image" content="{{ site.largeimage }}" />
+    <meta name="twitter:image" content="{{ site.largeimage | prepend: site.url}}" />
     <!-- End Twitter Card -->
 
 
