--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -238,7 +238,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 25px 0;
+        padding: 10px 0 10px 0;
         border: 0;
         background-color: transparent;
         -webkit-transition: padding .3s;
@@ -258,7 +258,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default.navbar-shrink {
-        padding: 10px 0;
+        padding: 10px 0 10px 0;
         background-color: #222;
     }
 
