--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+              <a class="navbar-brand page-scroll" href="#page-top"><img src={{site.logo}} /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                  Hi, I'm Xavier.
+                  Hi, I'm {{site.title}}.
                 </div>
                 <div class="intro-heading">I will help your game find its audience.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
