--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     <meta name="twitter:site" content="@xavierosee" />
     <meta name="twitter:title" content="{{ site.title }} - Mobile Marketing Consultant" />
     <meta name="twitter:description" content="{{ site.description }}" />
-    <meta name="twitter:image" content="{{ site.largeimage | prepend: site.url}}" />
+    <meta name="twitter:image" content="{{ site.largeimage | prepend: site.url }}" />
     <!-- End Twitter Card -->
 
 
@@ -53,21 +53,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- Cookies acceptance -->
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-    <script>
-    window.addEventListener("load", function(){
-    window.cookieconsent.initialise({
-      "palette": {
-        "popup": {
-          "background": "#000"
-        },
-        "button": {
-          "background": "#53c0cc"
-        }
-      },
-      "theme": "classic"
-    })});
-    </script>
+
+    <!-- OneTrust Cookies Consent Notice (Staging, offtheground.io, en-GB) start -->
+<script src="https://optanon.blob.core.windows.net/consent/daf52fca-8ded-4208-afa2-600bda610b8c-test.js" type="text/javascript" charset="UTF-8"></script>
+<script type="text/javascript">
+function OptanonWrapper() { }
+</script>
+<!-- OneTrust Cookies Consent Notice (Staging, offtheground.io, en-GB) end -->
 </head>
