--- a/_layouts/datasettings.html
+++ b/_layouts/datasettings.html
@@ -12,13 +12,8 @@
       <!-- End Google Tag Manager (noscript) -->
 
     {% include header.html %}
-    {% include intro.html %}
-    {% include services.html %}
-    {% include portfolio_grid.html %}
-    {% include badges.html %}
-    {% include contact.html %}
+    {% include data.html %}
     {% include footer.html %}
-    {% include modals.html %}
     {% include js.html %}
 
     </body>
