--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,13 @@
                 <div class="col-md-6">
                     <span class="copyright">Copyright &copy; {{ site.title }} & Off The Ground 2016-{{ 'now' | date: "%Y" }}</span>
                 </div>
-                <div class="col-md-2 col-md-offset-4">
+
+                <!-- My Data button start -->
+                <div class="col-md-2">
+                  <span class="copyright"><a href="mydata/index.html" target="_blank">My Data</a></span>
+                </div>
+                <!-- My Data button end -->
+                <div class="col-md-2">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
                         <li><a href="{{ network.url }}"><i class="fab fa-{{ network.title }}"></i></a>
@@ -12,15 +18,6 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <!-- Credits Popover not working -->
-                <!--
-                <div class="col-md-2">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Credits</a>
-                        </li>
-                    </ul>
-                </div>
-              -->
             </div>
         </div>
 
