added search certification

--- a/_includes/badges.html
+++ b/_includes/badges.html
@@ -2,11 +2,14 @@
     <aside class="badges">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                         <img src="img/logos/hatch.jpg" class="img-responsive img-centered" alt="">
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                         <img src="img/logos/adwordsmobile.jpg" class="img-responsive img-centered" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4">
+                        <img src="img/logos/adwordssearch.jpg" class="img-responsive img-centered" alt="">
                 </div>
             </div>
         </div>
