--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -42,7 +42,7 @@
                               </div>
                               <div class="col-lg-11 col-sm-11 col-xs-11">
                                 <div class="control-group form-group">
-                                    <label for="gdprConsent" style="color: white; font-family: {{ site.data.template.font.primary }}; font-weight: 100"> I agree to share my <strong>name</strong> and <strong>email address</strong> with Off The Ground for the sole purpose of offering me a free consultation. This data will be stored for 13 months. I am aware that I can withdraw my permission at all time in the <a href="mydata.html" target="_blank">My Data</a> menu. *</label>
+                                    <label for="gdprConsent" style="color: white; font-family: {{ site.data.template.font.primary }}; font-weight: 100"> I agree to share my <strong>name</strong> and <strong>email address</strong> with Off The Ground for the sole purpose of offering me a free consultation. This data will be stored for 13 months. I am aware that I can withdraw my permission at all time in the <a href="mydata/index.html" target="_blank">My Data</a> menu. *</label>
                                     <p class="help-block text-danger"></p>
                                   </div>
                               </div>
