updated links and wording

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,9 +3,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                  Hi, I'm {{site.title}}.
+                  Hi, we're {{site.title}}.
                 </div>
-                <div class="intro-heading">I will help your game find its audience.</div>
+                <div class="intro-heading">We can help your mobile apps and games find their audience.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
             </div>
         </div>
