--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,8 @@
             <div class="row">
                 <div class="col-lg-offset-2 col-lg-8 text-center">
                     <h1 class="section-heading">Services</h1>
-                    <h3 class="section-subheading text-muted">If you're looking for a consultant with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.</h3>
+                    <h3 class="section-subheading text-muted">If you're looking for a consultancy with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.</h3>
+                    <h3 class="section-subheading text-muted">Our range of services caters to everyone from AAA studios to solo indie developers. Our data-driven approach deliver KPI-validated ROI at all stage of your business cycle, from CPI and CPA to LTV and ROAS.</h3>
                 </div>
             </div>
             <div class="row text-center">
